--- a/index10.html
+++ b/index10.html
@@ -1,18 +1,13 @@
 <!doctype html>
-<html lang="hi">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>300x250 Truecaller Ad</title>
-
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <meta name="viewport" content="width=300, initial-scale=1.0" />
+    <title>Scrollable Truecaller Ad</title>
 
     <style>
       html,
-      body {
+    body {
         margin: 0;
         padding: 0;
         overflow: hidden;
@@ -27,112 +22,171 @@
 
       }
 
-      /* Fixed ad frame */
-      #ad-wrapper {
+      /* Main ad box */
+      #ad {
         width: 300px;
         height: 250px;
-        position: relative;
         overflow: hidden;
-        background: #111;
-        box-shadow: 0 8px 18px rgba(0, 0, 0, 0.45);
+        background: #ffffff;
       }
 
-      /* Slider */
-      .slider-box {
-        width: 100%;
-        height: 100%;
-        position: relative;
-      }
-
-      .slider-box img {
-        width: 200px;
-        height: 200px;
-        object-fit: contain;
-        border-radius: 10px;
-        transition:
-          transform 0.9s ease,
-          opacity 0.9s ease;
-      }
-
-      .slide-item {
-        position: absolute;
-        inset: 0;
+      /* Brand header */
+      .header {
+        height: 44px;
+        background: #0f172a;
+        color: #fff;
         display: flex;
         align-items: center;
-        justify-content: center;
-        opacity: 0;
+        padding: 0 10px;
+        font-weight: 900;
+        font-size: 14px;
       }
 
-      .slide-item.active {
-        opacity: 1;
-      }
-      .slide-item.leaving {
-        opacity: 0;
-        transform: rotate(-18deg) scale(0.75);
-      }
-      .slide-item.entering {
-        opacity: 1;
-        transform: rotate(18deg) scale(1.08);
+      .logo {
+        width: 24px;
+        height: 24px;
+        border-radius: 6px;
+        background: #facc15;
+        margin-right: 8px;
       }
 
-      .caption {
-        position: absolute;
-        bottom: 10px;
-        left: 0;
-        width: 100%;
-        text-align: center;
-        color: #fff;
-        font-weight: 700;
+      .feed {
+        height: 206px; /* 250 - header */
+        overflow-y: auto;
+        padding: 8px;
+        box-sizing: border-box;
+      }
+
+      /* Product card */
+      .card {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        padding: 8px;
+        border-radius: 12px;
+        margin-bottom: 8px;
+        background: #f8fafc;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.12);
+        text-decoration: none;
+        color: #000;
+      }
+
+      .card img {
+        width: 52px;
+        height: 52px;
+        border-radius: 10px;
+        object-fit: cover;
+      }
+
+      .info {
+        flex: 1;
+      }
+
+      .title {
         font-size: 12px;
+        font-weight: 700;
+        margin-bottom: 4px;
+      }
+
+      .price {
+        font-size: 11px;
+      }
+
+      .old {
+        text-decoration: line-through;
+        opacity: 0.6;
+        margin-right: 4px;
+      }
+
+      .new {
+        color: #16a34a;
+        font-weight: 900;
+      }
+
+      .feed::-webkit-scrollbar {
+        width: 4px;
+      }
+      .feed::-webkit-scrollbar-thumb {
+        background: #cbd5e1;
+        border-radius: 10px;
       }
     </style>
   </head>
 
   <body>
-    <div id="ad-wrapper">
-      <div class="slider-box">
-        <div class="slide-item active">
-          <a href="#">
-            <img
-              src="https://ik.imagekit.io/gku4adhog/GDS_EV_BEV_PEPSI%20CAN_ENG_PF_D10_300x250.png?updatedAt=1759998177036"
-            />
-          </a>
-        </div>
+    <div id="ad">
+      <div class="header">
+        <div class="logo"></div>
+        Your Brand
+      </div>
 
-        <div class="slide-item">
-          <a href="#">
-            <img
-              src="https://ik.imagekit.io/gku4adhog/IMG_3550.png?updatedAt=1755502745452"
-            />
-          </a>
-        </div>
+      <!-- SCROLL FEED -->
+      <div class="feed">
+        <a class="card" href="#">
+          <img
+            src="https://assets.mobavenue.com/static/blinkit/ds/bluelays.png"
+          />
+          <div class="info">
+            <div class="title">Smart Watch</div>
+            <div class="price">
+              <span class="old">₹4999</span>
+              <span class="new">₹1699</span>
+            </div>
+          </div>
+        </a>
 
-        <div class="caption">🔥 Trending Offers 🔥</div>
+        <a class="card" href="#">
+          <img
+            src="https://assets.mobavenue.com/static/blinkit/ds/bluelays.png"
+          />
+          <div class="info">
+            <div class="title">Wireless Headphones</div>
+            <div class="price">
+              <span class="old">₹2999</span>
+              <span class="new">₹899</span>
+            </div>
+          </div>
+        </a>
+
+        <a class="card" href="#">
+          <img
+            src="https://assets.mobavenue.com/static/blinkit/ds/bluelays.png"
+          />
+          <div class="info">
+            <div class="title">Running Shoes</div>
+            <div class="price">
+              <span class="old">₹3999</span>
+              <span class="new">₹1399</span>
+            </div>
+          </div>
+        </a>
+
+        <a class="card" href="#">
+          <img
+            src="https://assets.mobavenue.com/static/blinkit/ds/bluelays.png"
+          />
+          <div class="info">
+            <div class="title">Stylish Backpack</div>
+            <div class="price">
+              <span class="old">₹1999</span>
+              <span class="new">₹699</span>
+            </div>
+          </div>
+        </a>
+
+        <a class="card" href="#">
+          <img
+            src="https://assets.mobavenue.com/static/blinkit/ds/bluelays.png"
+          />
+          <div class="info">
+            <div class="title">Sports Sneakers</div>
+            <div class="price">
+              <span class="old">₹4599</span>
+              <span class="new">₹1799</span>
+            </div>
+          </div>
+        </a>
       </div>
     </div>
-
-    <script>
-      const slides = document.querySelectorAll(".slide-item");
-      let index = 0;
-
-      function rotateSlides() {
-        const current = slides[index];
-        current.classList.remove("active");
-        current.classList.add("leaving");
-
-        index = (index + 1) % slides.length;
-
-        const next = slides[index];
-        next.classList.add("entering");
-
-        setTimeout(() => {
-          current.classList.remove("leaving");
-          next.classList.remove("entering");
-          next.classList.add("active");
-        }, 400);
-      }
-
-      setInterval(rotateSlides, 3000);
-    </script>
   </body>
 </html>
