--- a/index13.html
+++ b/index13.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=300, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=300, initial-scale=1.0" />
-  <style>
-    html,
-    body {
+    <style>
+      html,
+      body {
         margin: 0;
         padding: 0;
         overflow: hidden;
@@ -21,129 +21,99 @@
 
       }
 
-    /* Ad */
-    #ad {
-      width: 300px;
-      height: 250px;
-      position: relative;
-      overflow: hidden;
-    }
-
-    /* Background */
-    .bg {
-      position: absolute;
-      inset: 0;
-      z-index: 1;
-    }
-
-    /* Overlay */
-    .overlay {
-      position: absolute;
-      inset: 0;
-      z-index: 2;
-    }
-
-    /* TOP 60% */
-    .top {
-      position: absolute;
-      top: -150px;
-      left: 0;
-      width: 100%;
-      animation: dropTop 1s ease forwards 0.4s;
-    }
-
-    .top img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    /* BOTTOM container (40%) */
-    .bottom {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 100px;
-      /* 40% of 250 */
-      display: flex;
-    }
-
-    /* bottom left 50% */
-    .bottom-left {
-      width: 50%;
-      height: 100%;
-      transform: translateX(-100%);
-      animation: slideLeft 1s ease forwards 0.9s;
-    }
-
-    .bottom-left img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    /* bottom right 50% */
-    .bottom-right {
-      width: 50%;
-      height: 100%;
-      transform: translateX(100%);
-      animation: slideRight 1s ease forwards 0.9s;
-    }
-
-    .bottom-right img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    /* Animations */
-    @keyframes dropTop {
-      to {
-        top: 0;
+      /* Slider */
+      .slider {
+        width: 300px;
+        height: 250px;
+        overflow-x: auto;
+        display: flex;
+        scroll-snap-type: x mandatory;
       }
-    }
 
-    @keyframes slideLeft {
-      to {
-        transform: translateX(0);
+      .slide {
+        min-width: 300px;
+        height: 250px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        gap: 4px;
+        padding: 4px;
+        box-sizing: border-box;
+        scroll-snap-align: start;
+        background: #111;
       }
-    }
 
-    @keyframes slideRight {
-      to {
-        transform: translateX(0);
+      /* Product tile */
+      .item {
+        background: #000;
+        border-radius: 8px;
+        overflow: hidden;
+        position: relative;
       }
-    }
-  </style>
-</head>
 
-<body>
-  <div id="ad">
-    <div class="bg"></div>
+      .item img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
 
-    <div class="overlay">
-      <div class="top">
-        <a href="https://vercel.com/">
-          <img
-            src="https://assets.mobavenue.com/static/blinkit/ds/pepsi.png" />
-        </a>
+      /* Brand badge */
+      .badge {
+        position: absolute;
+        top: 4px;
+        left: 4px;
+        background: #e11d48;
+        color: #fff;
+        font-size: 9px;
+        padding: 2px 6px;
+        border-radius: 6px;
+        font-weight: bold;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="slider">
+      <!-- SLIDE 1 -->
+      <div class="slide">
+        <a class="item" href="#"
+          ><span class="badge">HOT</span
+          ><img
+            src="https://assets.mobavenue.com/static/blinkit/ds/staplesoil.png"
+        /></a>
+        <a class="item" href="#"
+          ><span class="badge">SALE</span
+          ><img src="https://assets.mobavenue.com/static/blinkit/ds/pepsi.png"
+        /></a>
+        <a class="item" href="#"
+          ><span class="badge">NEW</span
+          ><img
+            src="https://assets.mobavenue.com/static/blinkit/ds/greenlays.png"
+        /></a>
+        <a class="item" href="#"
+          ><span class="badge">🔥</span
+          ><img
+            src="https://assets.mobavenue.com/static/blinkit/ds/staplesrice.png"
+        /></a>
       </div>
 
-      <div class="bottom">
-        <div class="bottom-left">
-          <a href="https://www.google.com/">
-            <img src="https://assets.mobavenue.com/static/blinkit/ds/pepsi.png" />
-          </a>
-        </div>
-        <div class="bottom-right">
-          <a href="https://chatgpt.com/">
-            <img src="https://assets.mobavenue.com/static/blinkit/ds/pepsi.png" />
-          </a>
-        </div>
+      <!-- SLIDE 2 -->
+      <div class="slide">
+        <a class="item" href="#"
+          ><img src="https://assets.mobavenue.com/static/blinkit/ds/pepsi.png"
+        /></a>
+        <a class="item" href="#"
+          ><img
+            src="https://assets.mobavenue.com/static/blinkit/ds/greenlays.png"
+        /></a>
+        <a class="item" href="#"
+          ><img src="https://assets.mobavenue.com/static/blinkit/ds/pepsi.png"
+        /></a>
+        <a class="item" href="#"
+          ><img
+            src="https://assets.mobavenue.com/static/blinkit/ds/staplesoil.png"
+        /></a>
       </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
