--- a/index18.html
+++ b/index18.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=300, height=250, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=300, height=250, initial-scale=1.0" />
-
-  <style>
-    html,
-    body {
+    <style>
+      html,
+       body {
         margin: 0;
         padding: 0;
         overflow: hidden;
@@ -22,100 +21,101 @@
 
       }
 
-    /* Banner */
-    #ad {
-      width: 300px;
-      height: 250px;
-      background: #fff;
-      position: relative;
-      overflow: hidden;
-    }
+      /* Banner */
+      #ad {
+        width: 300px;
+        height: 250px;
+        background: #fff;
+        position: relative;
+        overflow: hidden;
+      }
 
-    /* Image stack */
-    .stack {
-      position: absolute;
-      inset: 0;
-      transform: translateY(100%);
-      transition: transform 0.8s ease;
-    }
+      /* Main image */
+      #ad img {
+        width: 100%;
+        height: 100%;
+      }
 
-    .stack.active {
-      transform: translateY(0);
-    }
+      .strip {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        background: #16a34a;
+        color: #fff;
+        font-size: 12px;
+        font-weight: 700;
+        text-align: center;
+        padding: 6px 0;
+      }
 
-    .stack img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+      .price {
+        position: absolute;
+        bottom: 16px;
+        left: 16px;
+        background: #fff;
+        color: #000;
+        font-size: 14px;
+        font-weight: 900;
+        padding: 8px 12px;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
+      }
 
-    .overlay {
-      position: absolute;
-      inset: 0;
-      pointer-events: none;
-    }
+      .price span {
+        display: block;
+        font-size: 11px;
+        color: #16a34a;
+      }
 
-    /* Brand */
-    .brand {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      font-size: 12px;
-      font-weight: 700;
-      background: #fff;
-      padding: 4px 8px;
-      z-index: 5;
-    }
+      .delivery {
+        position: absolute;
+        top: 44px;
+        right: 12px;
+        background: #fff;
+        font-size: 11px;
+        font-weight: 700;
+        padding: 6px 10px;
+        border-radius: 999px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+      }
 
-    /* CTA */
-    .cta {
-      position: absolute;
-      bottom: 12px;
-      right: 12px;
-      font-size: 12px;
-      font-weight: 700;
-      background: #22c55e;
-      color: #000;
-      padding: 6px 14px;
-      border-radius: 20px;
-      z-index: 5;
-    }
-  </style>
-</head>
+      .cta {
+        position: absolute;
+        bottom: 16px;
+        right: 16px;
+        background: #22c55e;
+        color: #000;
+        font-size: 12px;
+        font-weight: 700;
+        padding: 8px 16px;
+        border-radius: 20px;
+      }
+    </style>
+  </head>
 
-<body>
-  <div id="ad">
-    <div class="brand">Instant Delivery ⚡</div>
+  <body>
+    <a
+      href="https://example.com"
+      target="_blank"
+      style="display: block; width: 300px; height: 250px"
+    >
+      <div id="ad">
+        <img
+          src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?w=600"
+        />
 
-    <!-- STACK 1 -->
-    <div class="stack active">
-      <a href="https://blinkit.com/?srsltid=AfmBOopU4uiqhvJQyToXcEElTXYKYutP1EMsGP2kaBR76mA3ddLJQGZo">
-        <img src="https://assets.mobavenue.com/static/blinkit/ds/bluelays.png" />
-      </a>
-      <div class="overlay"></div>
-    </div>
+        <div class="strip">Groceries in 10 Minutes ⚡</div>
 
-    <!-- STACK 2 -->
-    <div class="stack">
-      <a href="https://www.google.com/">
-        <img src="https://assets.mobavenue.com/static/blinkit/ds/colin.png" />
-      </a>
-      <div class="overlay"></div>
-    </div>
+        <div class="delivery">Free Delivery</div>
 
-    <div class="cta">Order Now</div>
-  </div>
+        <div class="price">
+          ₹199
+          <span>Today Only</span>
+        </div>
 
-  <script>
-    const stacks = document.querySelectorAll(".stack");
-    let i = 0;
-
-    setInterval(() => {
-      stacks[i].classList.remove("active");
-      i = (i + 1) % stacks.length;
-      stacks[i].classList.add("active");
-    }, 2800);
-  </script>
-</body>
-
+        <div class="cta">Order Now</div>
+      </div>
+    </a>
+  </body>
 </html>
