--- a/index19.html
+++ b/index19.html
@@ -6,7 +6,7 @@
 
     <style>
       html,
-       body {
+      body {
         margin: 0;
         padding: 0;
         overflow: hidden;
@@ -26,95 +26,97 @@
         width: 300px;
         height: 250px;
         background: #fff;
-        position: relative;
-        overflow: hidden;
+        display: flex;
       }
 
-      /* Main image */
-      #ad img {
-        width: 100%;
+      /* Left image */
+      .left {
+        width: 60%;
         height: 100%;
       }
 
-      .strip {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        background: #16a34a;
-        color: #fff;
-        font-size: 12px;
-        font-weight: 700;
-        text-align: center;
-        padding: 6px 0;
+      .left img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
       }
 
-      .price {
-        position: absolute;
-        bottom: 16px;
-        left: 16px;
-        background: #fff;
-        color: #000;
-        font-size: 14px;
+      /* Right content */
+      .right {
+        width: 40%;
+        padding: 14px 10px;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+
+      /* Offer text */
+      .offer {
+        font-size: 16px;
         font-weight: 900;
-        padding: 8px 12px;
-        border-radius: 12px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
+        line-height: 1.2;
       }
 
-      .price span {
-        display: block;
-        font-size: 11px;
+      .offer span {
         color: #16a34a;
+        font-size: 18px;
       }
 
-      .delivery {
-        position: absolute;
-        top: 44px;
-        right: 12px;
-        background: #fff;
+      /* Sub text */
+      .sub {
         font-size: 11px;
-        font-weight: 700;
-        padding: 6px 10px;
-        border-radius: 999px;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+        color: #374151;
+        margin-top: 6px;
       }
 
+      /* Badge */
+      .badge {
+        background: #000;
+        color: #fff;
+        font-size: 10px;
+        font-weight: 700;
+        padding: 4px 8px;
+        border-radius: 6px;
+        align-self: flex-start;
+      }
+
+      /* CTA */
       .cta {
-        position: absolute;
-        bottom: 16px;
-        right: 16px;
         background: #22c55e;
         color: #000;
         font-size: 12px;
         font-weight: 700;
-        padding: 8px 16px;
+        padding: 8px 10px;
         border-radius: 20px;
+        text-align: center;
       }
     </style>
   </head>
 
   <body>
-    <a
-      href="https://example.com"
-      target="_blank"
-      style="display: block; width: 300px; height: 250px"
-    >
+    <a href="https://example.com" target="_blank">
       <div id="ad">
-        <img
-          src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?w=600"
-        />
-
-        <div class="strip">Groceries in 10 Minutes ⚡</div>
-
-        <div class="delivery">Free Delivery</div>
-
-        <div class="price">
-          ₹199
-          <span>Today Only</span>
+        <div class="left">
+          <img
+            src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?w=600"
+          />
         </div>
 
-        <div class="cta">Order Now</div>
+        <div class="right">
+          <div>
+            <div class="badge">Fast Delivery ⚡</div>
+
+            <div class="offer">Just <span>₹149</span></div>
+
+            <div class="sub">
+              Fresh groceries<br />
+              at your doorstep
+            </div>
+          </div>
+
+          <div class="cta">Order Now</div>
+        </div>
       </div>
     </a>
   </body>
