--- a/index25.html
+++ b/index25.html
@@ -9,7 +9,8 @@
         padding: 0;
         box-sizing: border-box;
       }
-  html, body {
+
+      html, body {
         margin: 0;
         padding: 0;
         overflow: hidden;
@@ -27,197 +28,142 @@
       .ad-container {
         width: 300px;
         height: 250px;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        background: #c8e836;
         position: relative;
         overflow: hidden;
         cursor: pointer;
       }
 
-      .offer-badge {
-        position: absolute;
-        top: 12px;
-        right: 12px;
-        background: #ff4757;
-        color: white;
-        padding: 6px 14px;
-        border-radius: 20px;
-        font-weight: bold;
-        font-size: 13px;
-        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
-        animation: pulse 2s infinite;
-      }
-
-      @keyframes pulse {
-        0%,
-        100% {
-          transform: scale(1);
-        }
-
-        50% {
-          transform: scale(1.05);
-        }
-      }
-
       .brand-name {
         position: absolute;
-        left: 15px;
+        top: 12px;
+        left: 12px;
+        color: #000;
+        font-size: 14px;
+        font-weight: 500;
+      }
+
+      .offer-badge {
+        position: absolute;
+        top: 8px;
+        right: 12px;
+        background: #ff4444;
         color: white;
-        font-size: 22px;
+        padding: 6px 16px;
+        border-radius: 4px;
         font-weight: bold;
-        text-transform: lowercase;
-        letter-spacing: 1px;
+        font-size: 14px;
       }
 
       .headline {
         position: absolute;
-        top: 40px;
-        left: 15px;
-        color: white;
-        font-size: 18px;
-        font-weight: 700;
-        line-height: 1.2;
+        top: 45px;
+        left: 12px;
+        color: #000;
+        font-size: 22px;
+        font-weight: 500;
       }
 
-      .products-grid {
+      .time-badge {
         position: absolute;
-        bottom: 45px;
-        left: 15px;
-        right: 15px;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        top: 130px;
+        left: 12px;
+        color: #000;
+        font-size: 36px;
+        font-weight: 900;
+      }
+
+      .time-text {
+        font-size: 18px;
+        font-weight: 700;
+        margin-left: 4px;
+      }
+
+      .products-container {
+        position: absolute;
+        top: 50px;
+        right: 12px;
+        display: flex;
+        flex-direction: column;
         gap: 8px;
       }
 
       .product-box {
         background: white;
         border-radius: 8px;
-        padding: 8px;
+        padding: 5px;
+        height: 85px;
         display: flex;
         align-items: center;
         justify-content: center;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-        animation: fadeInUp 0.6s ease-out backwards;
-      }
-
-      .product-box:nth-child(1) {
-        animation-delay: 0.1s;
-      }
-
-      .product-box:nth-child(2) {
-        animation-delay: 0.2s;
-      }
-
-      .product-box:nth-child(3) {
-        animation-delay: 0.3s;
-      }
-
-      .product-box:nth-child(4) {
-        animation-delay: 0.4s;
-      }
-
-      .product-box:nth-child(5) {
-        animation-delay: 0.5s;
-      }
-
-      .product-box:nth-child(6) {
-        animation-delay: 0.6s;
-      }
-
-      @keyframes fadeInUp {
-        from {
-          opacity: 0;
-          transform: translateY(20px);
-        }
-
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
+        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
       }
 
       .product-box img {
         width: 100%;
-        height: 45px;
+        height: 100%;
         object-fit: contain;
+      }
+
+      .subtext {
+        position: absolute;
+        bottom: 52px;
+        left: 12px;
+        color: #000;
+        font-size: 12px;
+        font-weight: 600;
       }
 
       .cta-button {
         position: absolute;
-        bottom: 2px;
-        left: 15px;
-        right: 15px;
-        background: white;
-        color: #667eea;
-        padding: 10px;
-        text-align: center;
-        border-radius: 6px;
+        bottom: 12px;
+        left: 12px;
+        background: #ff4444;
+        color: white;
+        padding: 9px 28px;
+        border-radius: 25px;
         font-weight: bold;
         font-size: 14px;
-        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
         transition: transform 0.2s;
       }
 
       .cta-button:hover {
-        transform: scale(1.02);
+        transform: scale(1.05);
       }
     </style>
   </head>
-
   <body>
     <div class="ad-container" onclick="handleClick()">
+      <div class="brand-name">FRESHGO</div>
       <div class="offer-badge">70% OFF</div>
-      <div class="brand-name">zepto</div>
-      <div class="headline">Groceries in 10 Minutes</div>
 
-      <div class="products-grid">
-        <div class="product-box">
-          <a href="https://www.google.com/">
-            <img
-              src="https://assets.mobavenue.com/static/blinkit/ds/bluelays.png"
-              alt="Apple"
-            />
-          </a>
-        </div>
-        <div class="product-box">
-          <a href="https://www.google.com/">
-            <img
-              src="https://assets.mobavenue.com/static/blinkit/ds/bluelays.png"
-              alt="Eggs"
-            />
-          </a>
-        </div>
+      <div class="headline">Fresh<br />Groceries</div>
+
+      <div class="time-badge">15 <span class="time-text">min</span></div>
+
+      <div class="products-container">
         <div class="product-box">
           <img
             src="https://assets.mobavenue.com/static/blinkit/ds/bluelays.png"
-            alt="Tomato"
+            alt="Apple"
           />
         </div>
         <div class="product-box">
           <img
             src="https://assets.mobavenue.com/static/blinkit/ds/bluelays.png"
-            alt="Vegetables"
-          />
-        </div>
-        <div class="product-box">
-          <img
-            src="https://assets.mobavenue.com/static/blinkit/ds/bluelays.png"
-            alt="Bread"
-          />
-        </div>
-        <div class="product-box">
-          <img
-            src="https://assets.mobavenue.com/static/blinkit/ds/bluelays.png"
-            alt="Banana"
+            alt="Eggs"
           />
         </div>
       </div>
 
-      <div class="cta-button">Order Now →</div>
+      <div class="subtext">Free delivery</div>
+
+      <div class="cta-button">Order Now</div>
     </div>
 
     <script>
       function handleClick() {
-        console.log("Ad clicked!");
+        console.log("Variant 3 Ad clicked!");
         // window.open('https://your-landing-page.com', '_blank');
       }
     </script>
