--- a/index27.html
+++ b/index27.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        html, body {
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      html,
+      body {
         margin: 0;
         padding: 0;
         overflow: hidden;
@@ -20,143 +19,190 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        font-family:Arial, sans-serif;
+        font-family: Arial, sans-serif;
                           background-color: #dddddd32;
-
 
       }
 
-        .ad-container {
-            width: 300px;
-            height: 250px;
-            background: #c8e836;
-            position: relative;
-            overflow: hidden;
-            cursor: pointer;
+      .ad-container {
+        width: 300px;
+        height: 250px;
+        background: linear-gradient(135deg, #ff6b3d 0%, #ff8f5a 100%);
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+      }
+
+      .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 12px 15px;
+      }
+
+      .brand-name {
+        color: white;
+        font-size: 20px;
+        font-weight: 700;
+      }
+
+      .flash-badge {
+        background: #ffeb3b;
+        color: #000;
+        padding: 6px 12px;
+        border-radius: 20px;
+        font-weight: 900;
+        font-size: 11px;
+        display: flex;
+        align-items: center;
+        gap: 4px;
+      }
+
+      .product-images {
+        position: absolute;
+        left: 15px;
+        top: 70px;
+        display: flex;
+        gap: 8px;
+      }
+
+      .product-card {
+        animation: float 3s ease-in-out infinite;
+      }
+
+      .product-card:nth-child(1) {
+        height: 105px;
+        z-index: 3;
+      }
+
+      @keyframes float {
+        0%,
+        100% {
+          transform: translateY(0);
         }
 
-        .brand-name {
-            position: absolute;
-            top: 12px;
-            left: 12px;
-            color: #000;
-            font-size: 14px;
-            font-weight: bold;
+        50% {
+          transform: translateY(-5px);
         }
+      }
 
-        .offer-badge {
-            position: absolute;
-            top: 10px;
-            right: 12px;
-            background: #ff4444;
-            color: white;
-            padding: 6px 16px;
-            border-radius: 4px;
-            font-weight: bold;
-            font-size: 11px;
-        }
+      .product-card img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
 
-        .products-row {
-            position: absolute;
-            top: 45px;
-            left: 12px;
-            right: 12px;
-            display: flex;
-            gap: 8px;
-            justify-content: space-between;
-        }
+      .text-content {
+        position: absolute;
+        right: 15px;
+        top: 70px;
+        text-align: right;
+        max-width: 150px;
+      }
 
-        .product-small {
-            background: white;
-            border-radius: 8px;
-            padding: 8px;
-            width: 65px;
-            height: 60px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+      .tag {
+        color: rgba(255, 255, 255, 0.9);
+        font-size: 13px;
+        font-weight: 600;
+        margin-bottom: 4px;
+      }
 
-        .product-small img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }
+      .headline {
+        color: white;
+        font-size: 20px;
+        font-weight: 900;
+        line-height: 1.1;
+        margin-bottom: 8px;
+      }
 
-        .headline {
-            position: absolute;
-            top: 120px;
-            left: 12px;
-            right: 12px;
-            text-align: center;
-            color: #000;
-            font-size: 22px;
-            font-weight: 800;
-            line-height: 1.1;
-        }
+      .price-section {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 8px;
+      }
 
-        .delivery-info {
-            position: absolute;
-            bottom: 55px;
-            left: 12px;
-            right: 12px;
-            text-align: center;
-            color: #000;
-            font-size: 13px;
-            font-weight: 600;
-        }
+      .old-price {
+        color: #fff;
+        text-decoration: line-through;
+      }
 
-        .cta-button {
-            position: absolute;
-            bottom: 12px;
-            left: 50%;
-            transform: translateX(-50%);
-            background: #ff4444;
-            color: white;
-            padding: 6px 20px;
-            border-radius: 25px;
-            font-weight: 500;
-            font-size: 14px;
-            box-shadow: 0 3px 12px rgba(255, 68, 68, 0.4);
-            transition: transform 0.2s;
-        }
+      .new-price {
+        color: #000;
+        font-size: 20px;
+      }
 
-        .cta-button:hover {
-            transform: translateX(-50%) scale(1.05);
-        }
+      .condition {
+        color: rgba(255, 255, 255, 0.85);
+        font-size: 11px;
+        font-weight: 500;
+      }
+
+      .cta-button {
+        position: absolute;
+        bottom: 5px;
+        left: 15px;
+        right: 15px;
+        background: white;
+        color: #ff6b3d;
+        padding: 7px;
+        text-align: center;
+        border-radius: 8px;
+        font-weight: 500;
+        font-size: 13px;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        transition: transform 0.2s;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="ad-container">
-        <div class="brand-name">FRESHGO</div>
-        <div class="offer-badge">70% OFF</div>
+      <div class="header">
+        <div class="logo-section">
+          <div class="brand-name">Instamart</div>
+        </div>
+        <div class="flash-badge">
+          <span class="lightning"></span>
+          <span>FLASH SALE</span>
+        </div>
+      </div>
 
-        <div class="products-row">
-            <div class="product-small">
-                <a href="https://www.google.com/"> <img
-                        src="https://assets.mobavenue.com/static/blinkit/ds/bluelays.png" alt="Apple">
-                </a>
-            </div>
-            <div class="product-small">
-                <img src="https://assets.mobavenue.com/static/blinkit/ds/bluelays.png" alt="Eggs">
-            </div>
-            <div class="product-small">
-                <img src="https://assets.mobavenue.com/static/blinkit/ds/bluelays.png" alt="Tomato">
-            </div>
-            <div class="product-small">
-                <img src="https://assets.mobavenue.com/static/blinkit/ds/bluelays.png" alt="Banana">
-            </div>
+      <div class="content-section">
+        <div class="product-images">
+          <div class="product-card">
+            <img
+              src="https://assets.mobavenue.com/static/blinkit/ds/staplesoil.png"
+              alt="Apple"
+            />
+          </div>
         </div>
 
-        <div class="headline">Fresh Groceries<br>15 Min Delivery</div>
+        <div class="text-content">
+          <div class="tag">Daily Essentials</div>
+          <div class="headline">Grocery in<br />10 Minutes</div>
+          <div class="price-section">
+            <div class="old-price">₹299</div>
+            <div class="new-price">₹99</div>
+          </div>
+          <div class="condition">*On orders above ₹199</div>
+        </div>
+      </div>
 
-        <div class="delivery-info">Free delivery on first order</div>
-
-        <div class="cta-button">Order Now</div>
+      <div class="cta-button">
+        LOGO
+        <span class="arrow">→</span>
+      </div>
     </div>
 
-
-</body>
-
+    <script>
+      function handleClick() {
+        console.log("Instamart ad clicked!");
+        // window.open('https://your-landing-page.com', '_blank');
+      }
+    </script>
+  </body>
 </html>
