--- a/index9.html
+++ b/index9.html
@@ -1,13 +1,18 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="hi">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=300, initial-scale=1.0" />
-    <title>70/30 Split Ad</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>300x250 Truecaller Ad</title>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
     <style>
       html,
-     body {
+      body {
         margin: 0;
         padding: 0;
         overflow: hidden;
@@ -22,146 +27,112 @@
 
       }
 
-      #ad {
+      /* Fixed ad frame */
+      #ad-wrapper {
         width: 300px;
         height: 250px;
+        position: relative;
         overflow: hidden;
+        background: #111;
+        box-shadow: 0 8px 18px rgba(0, 0, 0, 0.45);
+      }
+
+      /* Slider */
+      .slider-box {
+        width: 100%;
+        height: 100%;
         position: relative;
       }
 
-      .left {
+      .slider-box img {
+        width: 200px;
+        height: 200px;
+        object-fit: contain;
+        border-radius: 10px;
+        transition:
+          transform 0.9s ease,
+          opacity 0.9s ease;
+      }
+
+      .slide-item {
         position: absolute;
-        top: 0;
-        left: 0;
-        width: 70%;
-        height: 100%;
-        overflow: hidden;
-      }
-
-      .left img {
-        width: 90%;
-        transition: opacity 0.6s ease, transform 0.6s ease;
-      }
-
-      .left img.hide {
-        opacity: 0;
-        transform: scale(1.05);
-      }
-
-      .right {
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 30%;
-        height: 100%;
-        color: #000;
-        padding: 10px 8px;
+        inset: 0;
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+        align-items: center;
+        justify-content: center;
+        opacity: 0;
       }
 
-      .tag {
-        background: #facc15;
-        color: #111;
-        font-size: 13px;
-        font-weight: 900;
-        padding: 3px 6px;
-        border-radius: 6px;
-        width: max-content;
+      .slide-item.active {
+        opacity: 1;
+      }
+      .slide-item.leaving {
+        opacity: 0;
+        transform: rotate(-18deg) scale(0.75);
+      }
+      .slide-item.entering {
+        opacity: 1;
+        transform: rotate(18deg) scale(1.08);
       }
 
-      .title {
-        font-size: 14px;
-        font-weight: 900;
-        margin-top: 6px;
-      }
-
-      .price {
+      .caption {
+        position: absolute;
+        bottom: 10px;
+        left: 0;
+        width: 100%;
+        text-align: center;
+        color: #fff;
+        font-weight: 700;
         font-size: 12px;
-        margin-top: 4px;
       }
-
-      .old {
-        text-decoration: line-through;
-        opacity: 0.7;
-      }
-
-    
     </style>
   </head>
 
   <body>
-    <div id="ad">
-      <div class="left">
-        <a id="productLink" target="_blank">
-          <img id="productImg" src="" />
-        </a>
-      </div>
-
-      <div class="right">
-        <div>
-          <div class="tag">70% OFF</div>
-          <div class="title" id="pName">—</div>
-          <div class="price">
-            <span class="old" id="oldPrice">—</span><br />
-            <span id="newPrice">—</span>
-          </div>
+    <div id="ad-wrapper">
+      <div class="slider-box">
+        <div class="slide-item active">
+          <a href="#">
+            <img
+              src="https://ik.imagekit.io/gku4adhog/GDS_EV_BEV_PEPSI%20CAN_ENG_PF_D10_300x250.png?updatedAt=1759998177036"
+            />
+          </a>
         </div>
 
+        <div class="slide-item">
+          <a href="#">
+            <img
+              src="https://ik.imagekit.io/gku4adhog/IMG_3550.png?updatedAt=1755502745452"
+            />
+          </a>
+        </div>
+
+        <div class="caption">🔥 Trending Offers 🔥</div>
       </div>
     </div>
 
     <script>
-      const products = [
-        {
-          img: "https://assets.mobavenue.com/static/blinkit/ds/pepsi.png",
-          name: "Wireless Headphones",
-          old: "₹2999",
-          price: "₹899",
-          link: "#1",
-        },
-        {
-          img: "https://assets.mobavenue.com/static/blinkit/ds/staplesrice.png",
-          name: "Smart Watch",
-          old: "₹4999",
-          price: "₹1499",
-          link: "#2",
-        },
-  
-      ];
+      const slides = document.querySelectorAll(".slide-item");
+      let index = 0;
 
-      const img = document.getElementById("productImg");
-      const link = document.getElementById("productLink");
-      const name = document.getElementById("pName");
-      const oldP = document.getElementById("oldPrice");
-      const newP = document.getElementById("newPrice");
+      function rotateSlides() {
+        const current = slides[index];
+        current.classList.remove("active");
+        current.classList.add("leaving");
 
-      let index = Math.floor(Math.random() * products.length);
+        index = (index + 1) % slides.length;
 
-      function show(i) {
-        const p = products[i];
-        img.classList.add("hide");
+        const next = slides[index];
+        next.classList.add("entering");
 
         setTimeout(() => {
-          img.src = p.img;
-          link.href = p.link;
-          name.textContent = p.name;
-          oldP.textContent = p.old;
-          newP.textContent = p.price;
-
-          img.classList.remove("hide");
-        }, 300);
+          current.classList.remove("leaving");
+          next.classList.remove("entering");
+          next.classList.add("active");
+        }, 400);
       }
 
-      // first show
-      show(index);
-
-      // auto rotate
-      setInterval(() => {
-        index = (index + 1) % products.length;
-        show(index);
-      }, 3500);
+      setInterval(rotateSlides, 3000);
     </script>
   </body>
 </html>
